Added comment about N/A

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Log-Dispatch-Email-Sendmail
 
+0.03
+	Send N/A, not Unknown, on machines without sendmail
+
 0.02	Fri Apr 26 15:45:56 EDT 2013
 	Don't attempt to install on machines without sendmail
 	Error if to is not set
