--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Log-Dispatch-Email-Sendmail Version 0.02
+Log-Dispatch-Email-Sendmail Version 0.03
 
 INSTALLATION
 
@@ -34,6 +34,6 @@ You can also look for information at:
 
 LICENSE AND COPYRIGHT
 
-Copyright (C) 2013 Nigel Horne
+Copyright (C) 2013-2022 Nigel Horne
 
-This program is released under the following licence: GPL
+This program is released under the following licence: GPL2
