--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Log-Dispatch-Email-Sendmail
 
+0.04
+	Disable smokers for now
+
 0.03	Thu Jan  6 15:10:38 EST 2022
 	Send N/A, not Unknown, on machines without sendmail
 	Workaround for Dreamhost error
